Fix more flex/alignment issues

--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ ul {
 .item > .caption {
     width: 160px;
     text-align: center;
+    padding-top: 8px;
 }
 
 /* quote */
